<resources>
    <string name="subtype_generic" translatable="false">%s</string>
    <string name="app_name">RAILS</string>
    <string name="set_name">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="abt_name">About</string>
    <string name="prj_name">Project</string>
    <string name="dwr_name">Daily Work Report</string>
    <string name="lblDeepLinkWelcome">Welcome to RPFS Rail Worker</string>
    <string name="www_domain">www.railprosfs.com</string>
    <string name="roleRWIC">Rail Worker</string>
    <string name="roleSup">Supervisor</string>
    <string name="roleMgr">Manager</string>
    <string name="roleAdm">Administrator</string>
    <string name="unknown">Unknown</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prf_System">System</string>
    <string name="prf_Time">Time</string>
    <string name="prf_Use24Clock">Use 24 Hour Clock</string>
    <string name="prf_Use24ClockSum">Display time values using a 24 Hour clock format (not AM-PM).</string>
    <string name="prf_About">About</string>
    <string name="prf_Logout">Logout</string>
    <string name="prf_LogoutSum">Logout of the App.</string>
    <string name="prf_Role">Role</string>
    <string name="rpfs_email">RPFS Email Address</string>
    <string name="rpfs_password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="login">Sign in</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">A password is required to use the App</string>
    <string name="error_incorrect_credential">This email and/or password is incorrect</string>
    <string name="error_server_issues">Having trouble communicating with the servers.  Try later or check with IT administrators.</string>
    <string name="blank"></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="job_dwr_count">Dwr Total # %d</string>
    <string name="job_doc_count">Doc Total # %d</string>
    <string name="display_hours">%d.%d hours</string>
    <string name="display_hours_dec">%3.1f hours</string>
    <string name="display_work_times">Begin %s - End %s</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="nojobs">No Jobs Scheduled</string>
    <string name="jobnumber">Job #</string>
    <string name="assignmentfor">Assignment for %s on Job #</string>
    <string name="joblocation">Job #%s</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="more_info">More Info</string>
    <string name="start_job_setup">Start Job Setup</string>
    <string name="start_job_utility">Start Job Setup Utility</string>
    <string name="start_cover_sheet">Start Cover Sheet</string>
    <string name="start_new_dwr">Start New DWR</string>
    <string name="dwr">DWR</string>
    <string name="dwr_classification">DWR - %s</string>
    <string name="js_classification">Job Setup - %s</string>
    <string name="jobsetup">Job Setup</string>
    <string name="status">Status</string>
    <string name="location">Location</string>
    <string name="dashed_range">%s - %s</string>
    <string name="question_text">This is an example audit question</string>
    <string name="button_na">N/A</string>
    <string name="button_f">F</string>
    <string name="button_pe">PE</string>
    <string name="button_p">P</string>
    <string name="audit">Audit</string>
    <string name="flash">Flash</string>
    <string name="job">Job Setup</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="lbl_property">Property:</string>
    <string name="lbl_subdivision">Subdivision:</string>
    <string name="lbl_permit_number">Permit Number:</string>
    <string name="lbl_distance_from_tracks">Distance from Tracks:</string>
    <string name="lbl_equipment_description">Equipment:</string>
    <string name="lbl_location">Location:</string>
    <string name="lbl_supervisor">Supervisor Job:</string>
    <string name="lbl_contacts">Contacts:</string>
    <string name="lbl_start_time">Start Time</string>
    <string name="lbl_end_time">End Time</string>
    <string name="view">View</string>
    <string name="documents">Documents</string>
    <string name="project">Project</string>
    <string name="review_notes">Review Notes</string>
    <string name="workzone">Work Zone</string>
    <string name="timesheet">Time Sheet</string>
    <string name="travelexpenses">Travel &amp; Expenses</string>
    <string name="title_activity_dwr_edit">Daily Work Report</string>
    <string name="title_activity_job_setup">Job Setup Form</string>
    <string name="title_activity_job_setup_extra">%s Job Setup Form</string>
    <string name="title_activity_cover_sheet_extra">%s Cover Sheet Form</string>
    <string name="title_activity_utility_setup_extra">%s Utility Setup Form</string>
    <string name="action_settings">Settings</string>
    <string name="format_name">%s (%s)</string>
    <string name="format_status_dwr">DWR Status: %s</string>
    <string name="err_no_fragmenttalkback">-Must implement FragmentTalkBack.</string>
    <string name="title_confirm_default">Confirmation</string>
    <string name="title_confirm_flash">Flash Audit Submission</string>
    <string name="title_confirm_submitDWR">Submit DWR</string>
    <string name="title_confirm_submitJobSetup">Submit Job Setup</string>
    <string name="title_confirm_submitAudit">Submit Job Audit</string>
    <string name="title_confirm_exitDWR">Warning</string>
    <string name="title_confirm_exitJobSetup">Warning</string>
    <string name="title_confirm_Sandbox">Warning</string>
    <string name="title_confirm_deleteDWR">Delete DWR</string>
    <string name="title_confirm_deleteJobSetup">Delete Job Setup</string>
    <string name="title_inform_validation">Validation Failed</string>
    <string name="title_inform_delete">Deletion Failed</string>
    <string name="title_inform_pictures_max">Picture Uploads</string>
    <string name="title_inform_display">INFORMATION</string>
    <string name="title_hours_worked">Hours Worked</string>
    <string name="title_hours_lunched">Lunch Hours</string>
    <string name="title_hours_briefed">Job Briefing Time</string>
    <string name="title_hours_traveled_to">Travel To Job Location</string>
    <string name="title_hours_traveled_from">Travel From Job Location</string>
    <string name="msg_confirm_delteDWR">Are you sure you want to delete this DWR?</string>
    <string name="msg_confirm_delteJobSetup">Are you sure you want to delete this Job Setup Form?</string>
    <string name="msg_confirm_submitDWR">Warning.  You cannot edit the DWR once submitted.</string>
    <string name="msg_confirm_submitJobSetup">Warning.  You cannot edit the Job Setup once submitted.</string>
    <string name="msg_confirm_submitAudit">Warning.  You cannot edit the Job Audit once submitted.</string>
    <string name="msg_confirm_flash">Are you sure you want to send these images?</string>
    <string name="msg_confirm_exitDWR">You are leaving the DWR form without saving. If you made any changes they will be lost.  Are you sure you want to exit?</string>
    <string name="msg_confirm_exitJobSetup">You are leaving the Job Setup form without saving. If you made any changes they will be lost.  Are you sure you want to exit?</string>
    <string name="msg_confirm_sandbox">You are entering SANDBOX MODE. You will not easily be able to return to the environment you are currently in and may lose your data. \nIs that OK?</string>
    <string name="msg_confirm_sandbox_mode">You are currently in PROD QA sandbox mode. Do you want to continue that?</string>
    <string name="msg_inform_list_failure">There was a problem displaying this list.  Please try again.</string>
    <string name="msg_inform_pictures_max">You have reached the maximum number of pictures that can be uploaded on one form.</string>
    <string name="msg_inform_validation_dwr">Please check that all required DWR fields are entered and correctly filled out.</string>
    <string name="msg_inform_validation_js">Please check that all required Job Setup fields are entered and correctly filled out.</string>
    <string name="msg_inform_validation_jobnbr">Please choose a valid Job Number for this DWR before saving.</string>
    <string name="msg_inform_deletion_fail">Unable to delete this Form.  Exit and return to this form to try again.</string>
    <string name="msg_inform_no_subdivisions">There are no subdivisions listed for this property.</string>
    <string name="msg_inform_no_coordinates">The location of this Job has not yet been entered into the system.</string>
    <string name="msg_inform_error_info">There was an error trying to use the camera.  \n\nPLEASE make sure you can take pictures with this device outside of the RAILS App. Use the built in camera app to verify the device is configured properly. </string>
    <string name="msg_no_file">The document cannot be found or no longer exists.</string>
    <string name="msg_not_saved_jobsetup">Failed to Save the JobSetup data.  Please try again.</string>
    <string name="msg_no_file_handler">There is no application that is available to load the document requested.</string>
    <string name="msg_bad_fieldworker">Please contact your Supervisor.  Your RWIC login is not properly configured for field work.</string>
    <string name="msg_confirm_gps">This will retrieve the current GPS coordinates from your device.  The latitude and longitude, separated by a semicolon, can also be entered manually.</string>
    <string name="msg_dwr_server_id">The server id of this DWR is: %d</string>
    <string name="title_pick_default">Select an Item</string>
    <string name="title_pick_vehicle">Select a Type of Vehicle</string>
    <string name="title_pick_wmata_line">Select a WMATA Line</string>
    <string name="title_pick_wmata_station">Select a Station Number</string>
    <string name="title_pick_class">Select Classification</string>
    <string name="title_pick_wmata_yard">Select Yard Name</string>
    <string name="title_pick_wmata_weather">Select Weather Condition</string>
    <string name="title_pick_wmata_track">Select Track Number</string>
    <string name="title_pick_nonbilledreason">Select Non-Billed Reason</string>
    <string name="title_pick_state">Select State of Work</string>
    <string name="title_pick_property">Select Railroad Property</string>
    <string name="title_pick_job_type">Select Job Form Type</string>
    <string name="title_cost_center">Special Cost Center</string>
    <string name="title_pick_district">Select District</string>
    <string name="title_pick_subdivision">Select Property Subdivision</string>
    <string name="title_pick_goodfairpoor">Select Condition</string>
    <string name="title_pick_pipeorwire">Select Line Type</string>
    <string name="title_pick_category">Select Category</string>
    <string name="title_pick_csx_region">Select CSX Region</string>
    <string name="title_pick_track_foul">Select Track Condition</string>
    <string name="title_pick_protection">Type of Protection</string>
    <string name="title_pick_per_diem">Per Diem Selection</string>
    <string name="title_pick_job_list">Select The Job Number</string>
    <string name="title_pick_shift">Work Shift</string>
    <string name="title_pick_time">Time Picker</string>
    <string name="title_pick_gps">GPS Coordinates</string>
    <string name="title_acct_issue">Unknown FieldWorker ID</string>
    <string name="lbl_addition_notes">Additional Notes:</string>
    <string name="lbl_mile_post">Milepost:</string>
    <string name="lbl_Supervisor">Track Supervisor:</string>
</resources>