<?xml version="1.0" encoding="utf-8"?>
<!-- Past DWRs -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/extraDwrRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dwr_list_vertical_margin">
    <TextView
        android:id="@+id/lblBarDwrRow"
        style="@style/HorzBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>
    <ImageView
        android:id="@+id/imgStatusDwrRow"
        android:layout_width="@dimen/dwr_status_icon"
        android:layout_height="@dimen/dwr_status_icon"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dwr_list_vertical_margin"
        android:layout_marginStart="@dimen/dwr_status_icon_horizontal_margin"
        android:layout_marginEnd="@dimen/dwr_status_icon_horizontal_margin"
        android:contentDescription="@string/status"/>
    <TextView
        android:id="@+id/txtDwrDateRow"
        style="@style/mSubtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/imgStatusDwrRow"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="@dimen/dwr_list_vertical_margin"
        tools:text="7/15/18"/>
    <TextView
        android:id="@+id/lblDwrRow"
        style="@style/mListline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/imgStatusDwrRow"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dwr_list_vertical_margin"
        android:layout_marginStart="@dimen/dwr_indent"
        android:onClick="ShowDwrDetail"
        android:text="@string/dwr"/>
    <TextView
        android:id="@+id/lblJsRow"
        style="@style/mListline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/imgStatusDwrRow"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dwr_list_vertical_margin"
        android:layout_marginStart="@dimen/dwr_indent"
        android:onClick="ShowJsDetail"
        android:text="@string/jobsetup"/>
</RelativeLayout>