<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutSchedule"
    android:background="@color/rpWhite"
    tools:context=".Schedule">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/lblFlash"
        style="@style/mFABtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flash"
        android:visibility="invisible"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_margin="12dp"
        android:layout_toStartOf="@id/fabFlash"
        android:layout_alignBottom="@+id/fabFlash"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:visibility="invisible"
        app:srcCompat="@drawable/outline_flash_on_24px"
        android:onClick="LaunchFlashAudit"
        android:layout_above="@id/fabJobAdd"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/fab_vertical_margin"
        android:layout_marginBottom="@dimen/fab_vertical_margin"
        android:layout_marginEnd="@dimen/fab_horizontal_margin"
        android:contentDescription="@string/flash" />

    <TextView
        android:id="@+id/lblJobAdd"
        style="@style/mFABtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job"
        android:visibility="invisible"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_margin="12dp"
        android:layout_toStartOf="@id/fabJobAdd"
        android:layout_alignBottom="@+id/fabJobAdd"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabJobAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:visibility="invisible"
        app:srcCompat="@drawable/outline_train_24px"
        android:layout_above="@id/fabDwrAdd"
        android:layout_alignParentEnd="true"
        android:onClick="LaunchNewJobSetup"
        android:layout_marginTop="@dimen/fab_vertical_margin"
        android:layout_marginBottom="@dimen/fab_vertical_margin"
        android:layout_marginEnd="@dimen/fab_horizontal_margin"
        android:contentDescription="@string/job" />

    <TextView
        android:id="@+id/lblDwrAdd"
        style="@style/mFABtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dwr"
        android:visibility="invisible"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:layout_margin="12dp"
        android:layout_toStartOf="@id/fabDwrAdd"
        android:layout_alignBottom="@+id/fabDwrAdd"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDwrAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:visibility="invisible"
        app:srcCompat="@drawable/outline_train_24px"
        android:layout_above="@id/fabExtras"
        android:layout_alignParentEnd="true"
        android:onClick="LaunchNewDwr"
        android:layout_marginTop="@dimen/fab_vertical_margin"
        android:layout_marginBottom="@dimen/fab_vertical_margin"
        android:layout_marginEnd="@dimen/fab_horizontal_margin"
        android:contentDescription="@string/dwr" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:onClick="ShowFABmenu"
        app:srcCompat="@drawable/baseline_add_24px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/fab_vertical_margin"
        android:layout_marginBottom="@dimen/fab_vertical_margin"
        android:layout_marginEnd="@dimen/fab_horizontal_margin"/>

</RelativeLayout>